--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,30 +1,31 @@
 <%= "Locations" %>
-
-<table>
-  <tr>
-    <th>Address</th>
-    <th>Latitude</th>
-    <th>Longitude</th>
-    <th>Distance</th>
-  </tr>
-  <% for location in @locations %>
+<div class = "text-center"> 
+  <table class = "table text-center">
     <tr>
-      <td><%= location.address %></td>
-      <td><%= location.latitude %></td>
-      <td><%= location.longitude %></td>
-      <td><%= location.distance %></td>
-      <td><%= link_to "Show", location %></td>
-      <td><%= link_to "Edit", edit_location_path(location) %></td>
-      <td><%= link_to "Destroy", location, :confirm => 'Are you sure?', :method => :delete %></td>
+      <th>Address</th>
+      <th>Latitude</th>
+      <th>Longitude</th>
+      <th>Distance</th>
     </tr>
+    <% for location in @locations %>
+      <tr>
+        <td><%= location.address %></td>
+        <td><%= location.latitude %></td>
+        <td><%= location.longitude %></td>
+        <td><%= location.distance %></td>
+        <td><%= link_to "Show", location , class: "btn" %></td>
+        <td><%= link_to "Edit", edit_location_path(location) , class: "btn" %></td>
+        <td><%= link_to "Destroy", location, :confirm => 'Are you sure?', :method => :delete , class: "btn delete_row", remote: true %></td>
+      </tr>
+    <% end %>
+  </table>
+
+  <p><%= link_to "New Location", new_location_path, class: "btn btn-success"  %></p>
+
+  <%= form_tag locations_path, :method => :get do %>
+    <p>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Search Near", :name => nil, class: "btn"  %>
+    </p>
   <% end %>
-</table>
-
-<p><%= link_to "New Location", new_location_path %></p>
-
-<%= form_tag locations_path, :method => :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search Near", :name => nil %>
-  </p>
-<% end %>
+</div>
