--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -18,9 +18,9 @@
 </p>
 
 <p>
-  <%= link_to "Edit", edit_location_path(@location) %> |
-  <%= link_to "Destroy", @location, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", locations_path %>
+  <%= link_to "Edit", edit_location_path(@location), class: "btn" %> |
+  <%= link_to "Destroy", @location, :confirm => 'Are you sure?', :method => :delete, class: "btn"  %> |
+  <%= link_to "View All", locations_path, class: "btn"  %>
 </p>
 
 <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}" %>
