--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,6 @@
 <% if current_user %> 
-  <h1 class = "text-center"> My Locations </h1> 
+  <h1 class = "text-center"> My Vacation Spots</h1> 
+  <h3 class = "text-center">  An Auto-cartographical History </h3> 
   <div class = "text-center center container"> 
     <table class = "table text-center">
       <tr>
